@@ -1,6 +1,7 @@
 2010-11-10  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/windows.jl: make get-window-by-role return nil if matching using a
 				      regex, rather than throwing an error
+				      reduce rename-window-func to props that actually work
 
 2010-11-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/windows.jl: added window-role function
